tests/paczka2/big_fuzzy/35706193.err
Error in line 3: S7 S861 39,7
Error in line 4: S7 S861 155,6
Error in line 6: 0o4m9 A859 3,6
Error in line 10: S7 S861 25,0
Error in line 11: S7 A859 78,6
Error in line 2: JyWi A859 36,0
Error in line 18: cvp69Dj S7 244,6
Error in line 23: cvp69Dj A859 7,6
Error in line 24: cvp69Dj S7 77,5
Error in line 27: S7 A859 138,3
Error in line 22: JyWi A859 3,1
Error in line 37: nkQphke2gP S7 70,83
Error in line 32: nkQphke2gP S7 19,3
Error in line 41: JyWi S861 -4,0
Error in line 55: cvp69Dj S861 70,8
Error in line 52: ba7l6xJaHW A859 25,7
Error in line 58: S7 S7 9,7
Error in line 70: S7 A840 34,3
Error in line 47: 0o4m9 A840 157,4
Error in line 64: cvp69Dj S861 33,0
Error in line 83: S7 A840 103,6
Error in line 87: 3VRw S7 118,68
Error in line 88: S7 S861 18,5
Error in line 79: 3VRw S7 41,7
Error in line 93: JyWi S7 35,1
Error in line 98: S7 S861 17,8
Error in line 104: S7 S7 19,0
Error in line 106: S7 S861 7,8
Error in line 110: S7 A859 52,4
Error in line 109: JyWi A859 49,3
Error in line 121: S7 A840 45,3
Error in line 124: S7 A840 634,0
Error in line 114: 3VRw A856 52,3
Error in line 130: ba7l6xJaHW A840 67,7
Error in line 125: 3VRw A859 144,3
Error in line 134: ba7l6xJaHW S7 167,02
Error in line 133: 3VRw S7 73,3
Error in line 132: ba7l6xJaHW S7 50,5
Error in line 138: S7 A859 90,3
Error in line 140: S7 A859 404,5
Error in line 142: S7 A859 53,3
Error in line 145: S7 A859 248,4
Error in line 144: 3VRw A859 95,3
Error in line 147: S7 S861 31,7
Error in line 149: nkQphke2gP S7 6,91
Error in line 150: S7 S7 56,8
Error in line 155: S7 S7 69,9
Error in line 159: JyWi S7 98,1
Error in line 161: JyWi A859 36,9
Error in line 169: S7 A840 16,7
Error in line 168: ba7l6xJaHW S7 74,1
Error in line 172: S7 S861 8,1
Error in line 156: nkQphke2gP S7 19,2
Error in line 176: S7 S861 16,4
Error in line 178: ba7l6xJaHW S861 37,4
Error in line 173: nkQphke2gP A859 60,3
Error in line 191: S7 A840 29,2
Error in line 193: JyWi S861 15,5
Error in line 200: S7 A840 57,3
Error in line 203: S7 A840 157,0
Error in line 201: cvp69Dj S861 21,4
Error in line 202: JyWi A840 10,7
Error in line 198: nkQphke2gP S7 91,0
Error in line 219: Fo4m9 A84F 6F,8
Error in line 217: nkQphke2gP A859 16,6
Error in line 230: S7 A840 87,5
Error in line 234: S7 A840 9,5
Error in line 210: 0o4m9 S7 79,5
Error in line 243: S7 A840 31,4
Error in line 240: 3VRw A859 99,9
Error in line 246: cvp69Dj S861 96,3
Error in line 250: S7 S7 86,6
